--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-node_modules
-# .env 
+# Bỏ qua thư mục node_modules
+node_modules/
+
+# Bỏ qua file .env
 .env
+
+# Bỏ qua các file log và cache
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
