--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "backend-nodejs-hoidanit",
+  "name": "nodejs_acebadmintion",
   "version": "1.0.0",
-  "description": "Backend nodejs",
-  "main": "server.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js",
-    "start": "nodemon ./src/server.js"
+    "dev": "nodemon .src/server.js"
   },
-  "keywords": [
-    "nodejs",
-    "react"
-  ],
-  "author": {
-    "name": "Hỏi Dân IT",
-    "url": "https://hoidanit.vn"
-  },
+  "author": "q",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "dotenv": "16.4.5",
-    "ejs": "3.1.10",
-    "express": "4.19.2",
-    "mongoose": "8.4.4"
-  },
-  "devDependencies": {
-    "nodemon": "3.1.4"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1",
+    "nodemon": "^3.1.9"
   }
 }
